src/component-library/site-components/CardGrid/CardGrid.module.scss
@use '../../foundation/index.module' as *;
@use '../../utilities/index.module' as *;

.wrapper {
  @include responsive-grid;

  > div {
    img {
      max-height: px-to-rem(243);
    }

    @include responsive-grid-span(
      $default: 6,
      $breakpoint-m: 3,
      $breakpoint-l: 4,
      $breakpoint-xl: 4
    );
  }

  &.half {
    > div {
      @include responsive-grid-span(
        $default: 6,
        $breakpoint-m: 3,
        $breakpoint-l: 6
      );
    }
  }
}

